--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask==3.0.0
 google-auth==2.23.3
 google-auth-oauthlib==1.1.0
 gspread==5.12.0
+gunicorn==20.1.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.2
